bbs/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: bbs
    app.kubernetes.io/name: bbs
  name: bbs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bbs
      app.kubernetes.io/name: bbs
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bbs
        app.kubernetes.io/name: bbs
    spec:
      containers:
        - image: registry.devops.rivtower.com/web5/bbs:v0.2.60
          imagePullPolicy: Always
          name: bbs
          command: ['bbs']
          args:
            [
              '--log-filter',
              'debug,hyper_util=info,sqlx=info',
              '--db-url',
              '$(DB_URL)',
              '--pds',
              '$(PDS)',
              '-w',
              '$(WHITELIST)',
            ]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext: {}
        - image: m.daocloud.io/docker.io/postgres:17-bookworm
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
  volumeClaimTemplates:
    - metadata:
        name: database
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 50Gi
